# wingover

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .release-it.json  .tool-versions  ARCHITECTURE.md  Dockerfile  Gemfile  MAC-SESSION.md  PLAN.md  README.md  STEERING.md  SYNC-UX.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
deploy/: pwa.Caddyfile
dev/: fake-auth-plugin.ts  landing-plugin.ts
docs/: CSS-MODULES.md  INSETS.md  ios-sim-runbook.md
e2e/: desktop.spec.ts  fixtures.ts  flight-detail.spec.ts  inset-bridge.spec.ts  inset-probe.mjs  insets.spec.ts  keyboard.spec.ts  logbook.spec.ts  maplibre.spec.ts  mock-search.spec.ts  plan.spec.ts  real-engine.spec.ts  record.spec.ts  replay.spec.ts  settings.spec.ts  sync.spec.ts  theme.spec.ts
eslint-rules/: max-usestate.js
fastlane/: Appfile  Fastfile  Matchfile  export-options.plist
ios-tests/: flight-path.txt  project.yml  run.sh
public/: landing.html  manifest.webmanifest  privacy.html
src/: App.tsx  sw.ts  (+4 more)
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/ionic/: Cargo.toml  build.rs
src-tauri/plugins/ionic/ios/: Package.swift
src-tauri/plugins/ionic/ios/Sources/: IonicPlugin.swift
src-tauri/plugins/ionic/src/: lib.rs
src-tauri/plugins/wingover/: Cargo.toml  build.rs
src-tauri/plugins/wingover-location/: Cargo.toml  build.rs
src-tauri/plugins/wingover-location/ios/: .gitignore  Package.swift
src-tauri/plugins/wingover-location/ios/Sources/: WingoverLocationPlugin.swift
src-tauri/plugins/wingover-location/permissions/autogenerated/: reference.md
src-tauri/plugins/wingover-location/permissions/autogenerated/commands/: fixes_since.toml
src-tauri/plugins/wingover-location/permissions/schemas/: schema.json
src-tauri/plugins/wingover-location/src/: desktop.rs  error.rs  lib.rs  mobile.rs
src-tauri/plugins/wingover/ios/: Package.swift
src-tauri/plugins/wingover/ios/Sources/: WingoverPlugin.swift
src-tauri/plugins/wingover/permissions/autogenerated/: reference.md
src-tauri/plugins/wingover/permissions/autogenerated/commands/: current_position.toml  keychain_available.toml  keychain_delete.toml  keychain_get.toml  keychain_set.toml  set_waypoints.toml  storekit_current_entitlement.toml  storekit_environment.toml  storekit_manage_subscriptions.toml  storekit_products.toml  storekit_purchase.toml
src-tauri/plugins/wingover/permissions/schemas/: schema.json
src-tauri/plugins/wingover/src/: announcer.rs  core.rs  desktop.rs  error.rs  fix.rs  lib.rs  mobile.rs  store.rs
src-tauri/src/: lib.rs  main.rs
(+315 files in other folders)
