[package]
name = "wingover"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "wingover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-geolocation = "2.3.2"
