[package]
name = "wingover"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "wingover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-wingover = { path = "plugins/wingover" }
log = "0.4"
tauri-plugin-opener = "2.5.4"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
