[package]
name = "wingover-location"
description = "Wingover's minimal native location capture: CoreLocation with background delivery, a file-backed session queue, and pull-based delivery to JS"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
links = "wingover-location"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["wry"] }
thiserror = "2"
