[package]
name = "tauri-plugin-wingover"
description = "Wingover's native plugin: CoreLocation capture with background delivery, the Rust-owned durable session log, waypoint speech announcements, and pull-based delivery to JS"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
links = "tauri-plugin-wingover"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["wry"] }
thiserror = "2"
